--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    />
+
     <link rel="stylesheet" href="./src/fullpage.min.css" />
     <link rel="stylesheet" href="./src/css/comm.css" />
     <title>cheej_portfolio</title>
@@ -71,6 +67,8 @@
         <h1 class="typing-demo">Cheej PORTFOLIO</h1>
         <h3>I'm Choi Eun-ji, a developing developer.</h3>
       </section>
+
+      <!-- about -->
       <section class="section sec2" id="about">
         <div class="inner">
           <div class="about-info">
@@ -245,6 +243,8 @@
           </div>
         </div>
       </section>
+
+      <!-- site1 -->
       <section class="section sec3" id="site">
         <div class="inner">
           <div class="site-contents">
@@ -256,7 +256,7 @@
                 <a href="http://cheej.me/saint-laurent-Complete/"
                   ><img
                     src="./src/image/saint_goods.jpg"
-                    alt="Saint Laurent Site"
+                    alt="Saint Laurent Redesign Site"
                 /></a>
               </div>
             </div>
@@ -318,31 +318,31 @@
           </div>
         </div>
       </section>
+      <!-- site2 -->
       <section class="section sec4" id="site">
         <div class="inner">
           <div class="site-contents">
             <div class="site-title">
-              <h2>"Saint Laurent" Team Project</h2>
+              <h2>"JCC" Art Center</h2>
             </div>
             <div class="site-view">
               <div class="site-img">
-                <a href="http://cheej.me/saint-laurent-Complete/"
-                  ><img
-                    src="./src/image/saint_goods.jpg"
-                    alt="Saint Laurent Site"
+                <a href="https://chej1122.cafe24.com/gnuboard5/"
+                  ><img src="./src/image/JCC.png" alt="JCC Redesign Site"
                 /></a>
               </div>
             </div>
             <div class="site-text">
               <div class="site-info">
-                팀 프로젝트로 기존 생로랑 페이지를 보다 가독성을 높이고 트렌디한
-                레이아웃으로 리뉴얼했습니다.
+                JCC 아트 센터의 주 컬러에 맞춰 블랙 & 레드로 포인트를 주어 보다
+                더 고급스러운 분위기를 연출하였고, 접근성 및 사용성도 기존보다
+                더 용이하게 고려하여 리디자인 하였습니다.
               </div>
               <div class="site-p">
                 <ul>
                   <li>
                     <b>TYPE </b>
-                    <span>적응형 웹 (Adaptive Web)</span>
+                    <span>Accessibility & Responsive & gnuboard</span>
                   </li>
                   <li>
                     <b>page</b>
@@ -350,15 +350,15 @@
                   </li>
                   <li>
                     <b>tool</b>
-                    <span>figma, HTML, SCSS, JS(jQuery, JavaScript)</span>
+                    <span>figma, HTML, CSS, JS(jQuery, JavaScript), php</span>
                   </li>
                   <li>
                     <b>process</b>
-                    <span>swiper Js</span>
+                    <span>swiper Js, gnuboard</span>
                   </li>
                   <li>
                     <b>참여도</b>
-                    <span>100% (팀 작업)</span>
+                    <span>100% (개인 작업)</span>
                   </li>
                 </ul>
               </div>
@@ -366,7 +366,7 @@
                 <div class="icon-link">
                   <div>
                     <a
-                      href="https://www.figma.com/file/zokvRs79EWBuT4lPUmQjyX/re-design-%2F%2F-CCJ?type=design&node-id=53%3A309&mode=design&t=0K1xI1VaWDnAksbB-1"
+                      href="https://www.figma.com/proto/zokvRs79EWBuT4lPUmQjyX/re-design-%2F%2F-CCJ?page-id=0%3A1&type=design&node-id=53-309&viewport=-10522%2C-1375%2C0.71&t=BQnSeZEIyZR5k4a5-1&scaling=min-zoom&starting-point-node-id=53%3A309&show-proto-sidebar=1&mode=design"
                       ><img src="./src/image/figma-square-mono.svg" alt="figma"
                     /></a>
                   </div>
@@ -379,7 +379,7 @@
                     >
                   </div>
                   <div>
-                    <a href="http://cheej.me/saint-laurent-Complete/"
+                    <a href="https://chej1122.cafe24.com/gnuboard5"
                       ><span class="material-symbols-outlined">
                         open_in_new
                       </span></a
@@ -395,31 +395,31 @@
         <div class="inner">
           <div class="site-contents">
             <div class="site-title">
-              <h2>"Saint Laurent" Team Project</h2>
+              <h2>"SIDMOOL" Responsive Onepage</h2>
             </div>
             <div class="site-view">
               <div class="site-img">
-                <a href="http://cheej.me/saint-laurent-Complete/"
+                <a href="https://cheej.me/onepage/"
                   ><img
-                    src="./src/image/saint_goods.jpg"
-                    alt="Saint Laurent Site"
+                    src="./src/image/onepage.jpg"
+                    alt="SIDMOOL Redesign Site"
                 /></a>
               </div>
             </div>
             <div class="site-text">
               <div class="site-info">
-                팀 프로젝트로 기존 생로랑 페이지를 보다 가독성을 높이고 트렌디한
-                레이아웃으로 리뉴얼했습니다.
+                자연 친화적인 이미지를 더욱 더하기 위해 주 컬러인 Green 계열의
+                컬러를 사용해 Onepage로 제작한 SIDMOOL 리디자인 페이지입니다.
               </div>
               <div class="site-p">
                 <ul>
                   <li>
                     <b>TYPE </b>
-                    <span>적응형 웹 (Adaptive Web)</span>
+                    <span>반응형 웹(Responsive), One page</span>
                   </li>
                   <li>
-                    <b>page</b>
-                    <span>m_header, goods-men, goods-women</span>
+                    <b>One page</b>
+                    <span>HTML, SCSS, JS (jQuery, JavaScript)</span>
                   </li>
                   <li>
                     <b>tool</b>
@@ -427,36 +427,22 @@
                   </li>
                   <li>
                     <b>process</b>
-                    <span>swiper Js</span>
+                    <span>AOS, Scroll Trigger</span>
                   </li>
                   <li>
                     <b>참여도</b>
-                    <span>100% (팀 작업)</span>
+                    <span>100% (개인 작업)</span>
                   </li>
                 </ul>
               </div>
               <div class="site-icon">
                 <div class="icon-link">
                   <div>
-                    <a
-                      href="https://www.figma.com/file/zokvRs79EWBuT4lPUmQjyX/re-design-%2F%2F-CCJ?type=design&node-id=53%3A309&mode=design&t=0K1xI1VaWDnAksbB-1"
-                      ><img src="./src/image/figma-square-mono.svg" alt="figma"
-                    /></a>
-                  </div>
-                  <div>
-                    <a
-                      href="https://www.figma.com/proto/zokvRs79EWBuT4lPUmQjyX/re-design-%2F%2F-CCJ?page-id=0%3A1&type=design&node-id=53-309&viewport=-10522%2C-1375%2C0.71&t=BQnSeZEIyZR5k4a5-1&scaling=min-zoom&starting-point-node-id=53%3A309&show-proto-sidebar=1&mode=design"
-                      ><span class="material-symbols-outlined">
-                        play_circle
-                      </span></a
-                    >
-                  </div>
-                  <div>
-                    <a href="http://cheej.me/saint-laurent-Complete/"
-                      ><span class="material-symbols-outlined">
+                    <a href="https://cheej.me/onepage/">
+                      <span class="material-symbols-outlined">
                         open_in_new
-                      </span></a
-                    >
+                      </span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -464,10 +450,178 @@
           </div>
         </div>
       </section>
-      <section class="section sec6"></section>
-      <section class="section sec7"></section>
-      <section class="section sec8"></section>
-      <section class="section sec9"></section>
+      <section class="section sec6" id="product">
+        <div class="title">
+          <h2>
+            graphic design • banner • sns • Product design • protfolio • banner
+            • sns • graphic design • banner • sns • Product design • protfolio •
+            banner • sns
+          </h2>
+        </div>
+        <!-- product -->
+        <div class="g-container">
+          <h2>Product design</h2>
+          <!-- <div class="logo">
+            <img src="./src/image/dar_logo.png" alt="dar logo" />
+          </div> -->
+          <div class="gallery-wrap">
+            <div class="item item-1">
+              <img src="./src/image/dar_2.jpg" alt="" />
+            </div>
+            <div class="item item-2">
+              <img src="./src/image/dar_3.jpg" alt="" />
+            </div>
+            <div class="item item-3">
+              <img src="./src/image/dar_4.jpg" alt="" />
+            </div>
+            <div class="item item-4">
+              <img src="./src/image/dar_5.jpg" alt="" />
+            </div>
+            <div class="item item-5">
+              <img src="./src/image/dar_6.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section sec7" id="graphic">
+        <div class="title"><h2>Graphic design</h2></div>
+        <div class="sns-wrap">
+          <!-- horizontal -->
+          <div class="horizontal">
+            <div class="flip">
+              <div
+                class="front"
+                style="
+                  background-image: url(./src/image/sns/2022-추석-최종.jpg);
+                "
+              >
+                <!-- <h1 class="text-shadow">MOUNTAIN</h1> -->
+              </div>
+              <div class="back">
+                <h3>명절 SNS Card</h3>
+                <p>EZCARCARE 추석 인사말</p>
+              </div>
+            </div>
+            <div class="flip">
+              <div
+                class="front"
+                style="background-image: url(./src/image/sns/세라믹왁스.jpg)"
+              >
+                <!-- <h1 class="text-shadow">LAKE</h1> -->
+              </div>
+              <div class="back">
+                <h3>홍보용 SNS Peed</h3>
+                <p>EZCARCARE 세라믹 왁스 Instargram peed</p>
+              </div>
+            </div>
+            <div class="flip">
+              <div
+                class="front"
+                style="background-image: url(./src/image/sns/배송.jpg)"
+              >
+                <!-- <h1 class="text-shadow">OCEAN</h1> -->
+              </div>
+              <div class="back">
+                <h3>이벤트 팝업</h3>
+                <p>EZCARCARE 무료 배송 이벤트 안내</p>
+              </div>
+            </div>
+            <div class="flip">
+              <div
+                class="front"
+                style="background-image: url(./src/image/sns/크리스마스.jpg)"
+              >
+                <!-- <h1 class="text-shadow">OCEAN</h1> -->
+              </div>
+              <div class="back">
+                <h3>크리스마스 인사 팝업</h3>
+                <p>EZCARCARE 크리스마스 팝업</p>
+              </div>
+            </div>
+          </div>
+          <!-- vertical -->
+          <div class="vertical">
+            <div class="flip flip-vertical">
+              <div
+                class="front"
+                style="background-image: url(./src/image/sns/졸작1.jpg)"
+              >
+                <!-- <h1 class="text-shadow">FOREST</h1> -->
+              </div>
+              <div class="back">
+                <h3>Graphic Design</h3>
+                <p>
+                  2023 졸업작품<br />
+                  영화'나니아연대기' 포스터
+                </p>
+              </div>
+            </div>
+
+            <div class="flip">
+              <div
+                class="front"
+                style="background-image: url(./src/image/sns/졸작2.jpg)"
+              >
+                <!-- <h1 class="text-shadow">LAKE</h1> -->
+              </div>
+              <div class="back">
+                <h3>Graphic Design</h3>
+                <p>
+                  2023 졸업작품<br />
+                  책 '탈무드' 북커버 포스터
+                </p>
+              </div>
+            </div>
+            <div class="flip flip-vertical">
+              <div
+                class="front"
+                style="background-image: url(./src/image/sns/크리스마스2.jpg)"
+              >
+                <!-- <h1 class="text-shadow">SWAMP</h1> -->
+              </div>
+              <div class="back">
+                <h3>크리스마스 인사 팝업</h3>
+                <p>EZCARCARE 크리스마스 인사말 Instargram peed</p>
+              </div>
+            </div>
+            <div class="flip flip-vertical">
+              <div
+                class="front"
+                style="background-image: url(./src/image/sns/쿠폰\ 이벤트.jpg)"
+              >
+                <!-- <h1 class="text-shadow">SWAMP</h1> -->
+              </div>
+              <div class="back">
+                <h3>이벤트 팝업</h3>
+                <p>EZCARCARE 네이버 찜하기 할인 쿠폰 이벤트 팝업</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section sec8" id="banner">
+        <div class="banner-container">
+          <h2>banner</h2>
+          <div class="slider">
+            <div class="slide">
+              <img src="./src/image/banner/bnr-5.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./src/image/banner/bnr-1.jpg" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./src/image/banner/bnr-2.jpg" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./src/image/banner/bnr-3.jpg" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./src/image/banner/bnr-4.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section sec9" id="contect"></section>
     </main>
   </body>
 </html>
