--- a/index.html
+++ b/index.html
@@ -600,51 +600,18 @@
         </div>
       </section>
       <section class="section sec8" id="banner">
-        <div class="slider">
-          <div class="slider">
-            <div class="slider__slide slider__slide--active" data-slide="1">
-              <div class="slider__wrap">
-                <div class="slider__back"></div>
-              </div>
-              <div class="slider__inner">
-                <div class="slider__content">
-                  <h1>
-                    Slide <br />
-                    One
-                  </h1>
-                  <a class="go-to-next next"></a>
-                </div>
-              </div>
-            </div>
-            <div class="slider__slide" data-slide="2">
-              <div class="slider__wrap">
-                <div class="slider__back"></div>
-              </div>
-              <div class="slider__inner">
-                <div class="slider__content">
-                  <h1>
-                    Slide <br />
-                    Two
-                  </h1>
-                  <a class="go-to-next next"></a>
-                </div>
-              </div>
-            </div>
-            <div class="slider__slide" data-slide="3">
-              <div class="slider__wrap">
-                <div class="slider__back"></div>
-              </div>
-              <div class="slider__inner">
-                <div class="slider__content">
-                  <h1>
-                    Slide <br />
-                    Three
-                  </h1>
-                  <a class="go-to-next next"></a>
-                </div>
-              </div>
-            </div>
-            <div class="slider__indicators"></div>
+        <h2>Banner</h2>
+        <div id="slider">
+          <div class="slides"><img src="./src/image/banner/bnr-5.png" /></div>
+          <div class="slides"><img src="./src/image/banner/bnr-6.png" /></div>
+          <div class="slides"><img src="./src/image/banner/bnr-11.jpg" /></div>
+          <div class="slides"><img src="./src/image/banner/bnr-1.jpg" /></div>
+          <div class="slides"><img src="./src/image/banner/bnr-3.jpg" /></div>
+
+          <div id="dot">
+            <span class="dot"></span><span class="dot"></span
+            ><span class="dot"></span><span class="dot"></span
+            ><span class="dot"></span>
           </div>
         </div>
       </section>
