--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
         </div>
       </section>
       <section class="section sec6" id="product">
+        <!-- title -->
         <div class="title">
           <h2>
             graphic design • banner • sns • Product design • protfolio • banner
