--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
   </head>
   <body>
     <main class="main" id="fullpage">
+      <!-- <header id="header">
+        <nav class="header-nav">
+          <ul>
+            <li><a href="#intro"></a>Intro</li>
+            <li><a href="#about"></a>About</li>
+            <li>
+              site
+              <ul>
+                <li><a href="#site1"></a>Responsive & gnuboard</li>
+                <li><a href="#site2"></a>Responsive Onepage</li>
+                <li><a href="#site3"></a>Adaptive Web</li>
+              </ul>
+            </li>
+            <li>
+              port
+              <ul>
+                <li><a href="product"></a>Product Design</li>
+                <li><a href="graphic"></a>graphic</li>
+                <li><a href="banner"></a>Banner</li>
+                <li><a href="motion"></a>Motion Graphic</li>
+              </ul>
+            </li>
+            <li><a href="#contact"></a>Contact</li>
+          </ul>
+        </nav>
+      </header> -->
       <!-- intro -->
       <section class="section sec1" id="intro">
         <h1 class="typing-demo">Cheej PORTFOLIO</h1>
@@ -428,12 +454,12 @@
                     /></a>
                   </div>
                   <div>
-                    <a
-                      href="https://www.figma.com/proto/zokvRs79EWBuT4lPUmQjyX/re-design-%2F%2F-CCJ?page-id=0%3A1&type=design&node-id=53-309&viewport=-10522%2C-1375%2C0.71&t=BQnSeZEIyZR5k4a5-1&scaling=min-zoom&starting-point-node-id=53%3A309&show-proto-sidebar=1&mode=design"
-                      ><span class="material-symbols-outlined">
-                        play_circle
-                      </span></a
-                    >
+                    <a href="https://github.com/cheeej/saint-laurent-Complete"
+                      ><i
+                        id="site-github"
+                        class="fa-brands fa-github cosial-icon site-git"
+                      ></i
+                    ></a>
                   </div>
                   <div>
                     <a href="http://cheej.me/saint-laurent-Complete/"
