--- a/index.html
+++ b/index.html
@@ -57,32 +57,18 @@
   </head>
   <body>
     <main class="main" id="fullpage">
-      <!-- <header id="header">
-        <nav class="header-nav">
+      <!-- header -->
+      <header id="header">
+        <nav class="header-nav" id="nav">
           <ul>
-            <li><a href="#intro"></a>Intro</li>
-            <li><a href="#about"></a>About</li>
-            <li>
-              site
-              <ul>
-                <li><a href="#site1"></a>Responsive & gnuboard</li>
-                <li><a href="#site2"></a>Responsive Onepage</li>
-                <li><a href="#site3"></a>Adaptive Web</li>
-              </ul>
-            </li>
-            <li>
-              port
-              <ul>
-                <li><a href="product"></a>Product Design</li>
-                <li><a href="graphic"></a>graphic</li>
-                <li><a href="banner"></a>Banner</li>
-                <li><a href="motion"></a>Motion Graphic</li>
-              </ul>
-            </li>
-            <li><a href="#contact"></a>Contact</li>
+            <li><a href="#intro">Intro</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#site">Site</a></li>
+            <li><a href="#product">Design</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
-      </header> -->
+      </header>
       <!-- intro -->
       <section class="section sec1" id="intro">
         <h1 class="typing-demo">Cheej PORTFOLIO</h1>
@@ -274,12 +260,12 @@
             </div>
             <div class="site-view">
               <div class="site-img">
-                <a href="https://chej1122.cafe24.com/gnuboard5/"
+                <a href="https://chej1122.cafe24.com/gnuboard5/" target="_blank"
                   ><img src="./src/image/JCC.png" alt="JCC Redesign Site"
                 /></a>
               </div>
             </div>
-            <div class="site-text">
+            <div class="site-text site1-txt">
               <div class="site-info">
                 JCC 아트 센터의 주 컬러에 맞춰 블랙 & 레드로 포인트를 주어 보다
                 더 고급스러운 분위기를 연출하였고, 접근성 및 사용성도 기존보다
@@ -317,11 +303,12 @@
                   <div>
                     <a
                       href="https://www.figma.com/file/zokvRs79EWBuT4lPUmQjyX/re-design-%2F%2F-JCC?type=design&node-id=0%3A1&mode=design&t=bXHrnKuO854l07uO-1"
+                      target="_blank"
                       ><img src="./src/image/figma-square-mono.svg" alt="figma"
                     /></a>
                   </div>
                   <div>
-                    <a href="https://github.com/cheeej/JCC"
+                    <a href="https://github.com/cheeej/JCC" target="_blank"
                       ><i
                         id="site-github"
                         class="fa-brands fa-github cosial-icon site-git"
@@ -329,7 +316,9 @@
                     ></a>
                   </div>
                   <div>
-                    <a href="https://chej1122.cafe24.com/gnuboard5"
+                    <a
+                      href="https://chej1122.cafe24.com/gnuboard5"
+                      target="_blank"
                       ><span class="material-symbols-outlined">
                         open_in_new
                       </span></a
@@ -350,7 +339,7 @@
             </div>
             <div class="site-view">
               <div class="site-img">
-                <a href="https://cheej.me/onepage/"
+                <a href="https://cheej.me/onepage/" target="_blank"
                   ><img
                     src="./src/image/onepage.jpg"
                     alt="SIDMOOL Redesign Site"
@@ -389,7 +378,7 @@
               <div class="site-icon">
                 <div class="icon-link">
                   <div>
-                    <a href="https://cheej.me/onepage/">
+                    <a href="https://cheej.me/onepage/" target="_blank">
                       <span class="material-symbols-outlined">
                         open_in_new
                       </span>
@@ -409,7 +398,9 @@
             </div>
             <div class="site-view">
               <div class="site-img">
-                <a href="http://cheej.me/saint-laurent-Complete/"
+                <a
+                  href="http://cheej.me/saint-laurent-Complete/"
+                  target="_blank"
                   ><img
                     src="./src/image/saint_goods.jpg"
                     alt="Saint Laurent Redesign Site"
@@ -450,11 +441,14 @@
                   <div>
                     <a
                       href="https://www.figma.com/file/zokvRs79EWBuT4lPUmQjyX/re-design-%2F%2F-CCJ?type=design&node-id=53%3A309&mode=design&t=0K1xI1VaWDnAksbB-1"
+                      target="_blank"
                       ><img src="./src/image/figma-square-mono.svg" alt="figma"
                     /></a>
                   </div>
                   <div>
-                    <a href="https://github.com/cheeej/saint-laurent-Complete"
+                    <a
+                      href="https://github.com/cheeej/saint-laurent-Complete"
+                      target="_blank"
                       ><i
                         id="site-github"
                         class="fa-brands fa-github cosial-icon site-git"
@@ -462,7 +456,9 @@
                     ></a>
                   </div>
                   <div>
-                    <a href="http://cheej.me/saint-laurent-Complete/"
+                    <a
+                      href="http://cheej.me/saint-laurent-Complete/"
+                      target="_blank"
                       ><span class="material-symbols-outlined">
                         open_in_new
                       </span></a
@@ -509,116 +505,120 @@
         </div>
       </section>
       <section class="section sec7" id="graphic">
-        <div class="title"><h2>Graphic design</h2></div>
-        <div class="sns-wrap">
-          <!-- horizontal -->
-          <div class="horizontal">
-            <div class="flip">
-              <div
-                class="front"
-                style="
-                  background-image: url(./src/image/sns/2022-추석-최종.jpg);
-                "
-              >
-                <!-- <h1 class="text-shadow">MOUNTAIN</h1> -->
+        <div class="sns-inner">
+          <div class="title"><h2>Graphic design</h2></div>
+          <div class="sns-wrap">
+            <!-- horizontal -->
+            <div class="horizontal">
+              <div class="flip">
+                <div
+                  class="front"
+                  style="
+                    background-image: url(./src/image/sns/2022-추석-최종.jpg);
+                  "
+                >
+                  <!-- <h1 class="text-shadow">MOUNTAIN</h1> -->
+                </div>
+                <div class="back">
+                  <h3>명절 SNS Card</h3>
+                  <p>EZCARCARE 추석 인사말</p>
+                </div>
               </div>
-              <div class="back">
-                <h3>명절 SNS Card</h3>
-                <p>EZCARCARE 추석 인사말</p>
+              <div class="flip">
+                <div
+                  class="front"
+                  style="background-image: url(./src/image/sns/세라믹왁스.jpg)"
+                >
+                  <!-- <h1 class="text-shadow">LAKE</h1> -->
+                </div>
+                <div class="back">
+                  <h3>홍보용 SNS Peed</h3>
+                  <p>EZCARCARE 세라믹 왁스 Instargram peed</p>
+                </div>
               </div>
-            </div>
-            <div class="flip">
-              <div
-                class="front"
-                style="background-image: url(./src/image/sns/세라믹왁스.jpg)"
-              >
-                <!-- <h1 class="text-shadow">LAKE</h1> -->
+              <div class="flip">
+                <div
+                  class="front"
+                  style="background-image: url(./src/image/sns/배송.jpg)"
+                >
+                  <!-- <h1 class="text-shadow">OCEAN</h1> -->
+                </div>
+                <div class="back">
+                  <h3>이벤트 팝업</h3>
+                  <p>EZCARCARE 무료 배송 이벤트 안내</p>
+                </div>
               </div>
-              <div class="back">
-                <h3>홍보용 SNS Peed</h3>
-                <p>EZCARCARE 세라믹 왁스 Instargram peed</p>
-              </div>
-            </div>
-            <div class="flip">
-              <div
-                class="front"
-                style="background-image: url(./src/image/sns/배송.jpg)"
-              >
-                <!-- <h1 class="text-shadow">OCEAN</h1> -->
-              </div>
-              <div class="back">
-                <h3>이벤트 팝업</h3>
-                <p>EZCARCARE 무료 배송 이벤트 안내</p>
-              </div>
-            </div>
-            <div class="flip">
-              <div
-                class="front"
-                style="background-image: url(./src/image/sns/크리스마스.jpg)"
-              >
-                <!-- <h1 class="text-shadow">OCEAN</h1> -->
-              </div>
-              <div class="back">
-                <h3>크리스마스 인사 팝업</h3>
-                <p>EZCARCARE 크리스마스 팝업</p>
-              </div>
-            </div>
-          </div>
-          <!-- vertical -->
-          <div class="vertical">
-            <div class="flip flip-vertical">
-              <div
-                class="front"
-                style="background-image: url(./src/image/sns/졸작1.jpg)"
-              >
-                <!-- <h1 class="text-shadow">FOREST</h1> -->
-              </div>
-              <div class="back">
-                <h3>Graphic Design</h3>
-                <p>
-                  2023 졸업작품<br />
-                  영화'나니아연대기' 포스터
-                </p>
+              <div class="flip">
+                <div
+                  class="front"
+                  style="background-image: url(./src/image/sns/크리스마스.jpg)"
+                >
+                  <!-- <h1 class="text-shadow">OCEAN</h1> -->
+                </div>
+                <div class="back">
+                  <h3>크리스마스 인사 팝업</h3>
+                  <p>EZCARCARE 크리스마스 팝업</p>
+                </div>
               </div>
             </div>
+            <!-- vertical -->
+            <div class="vertical">
+              <div class="flip flip-vertical">
+                <div
+                  class="front"
+                  style="background-image: url(./src/image/sns/졸작1.jpg)"
+                >
+                  <!-- <h1 class="text-shadow">FOREST</h1> -->
+                </div>
+                <div class="back">
+                  <h3>Graphic Design</h3>
+                  <p>
+                    2023 졸업작품<br />
+                    영화'나니아연대기' 포스터
+                  </p>
+                </div>
+              </div>
 
-            <div class="flip">
-              <div
-                class="front"
-                style="background-image: url(./src/image/sns/졸작2.jpg)"
-              >
-                <!-- <h1 class="text-shadow">LAKE</h1> -->
+              <div class="flip">
+                <div
+                  class="front"
+                  style="background-image: url(./src/image/sns/졸작2.jpg)"
+                >
+                  <!-- <h1 class="text-shadow">LAKE</h1> -->
+                </div>
+                <div class="back">
+                  <h3>Graphic Design</h3>
+                  <p>
+                    2023 졸업작품<br />
+                    책 '탈무드' 북커버 포스터
+                  </p>
+                </div>
               </div>
-              <div class="back">
-                <h3>Graphic Design</h3>
-                <p>
-                  2023 졸업작품<br />
-                  책 '탈무드' 북커버 포스터
-                </p>
+              <div class="flip flip-vertical">
+                <div
+                  class="front"
+                  style="background-image: url(./src/image/sns/크리스마스2.jpg)"
+                >
+                  <!-- <h1 class="text-shadow">SWAMP</h1> -->
+                </div>
+                <div class="back">
+                  <h3>크리스마스 인사 팝업</h3>
+                  <p>EZCARCARE 크리스마스 인사말 Instargram peed</p>
+                </div>
               </div>
-            </div>
-            <div class="flip flip-vertical">
-              <div
-                class="front"
-                style="background-image: url(./src/image/sns/크리스마스2.jpg)"
-              >
-                <!-- <h1 class="text-shadow">SWAMP</h1> -->
-              </div>
-              <div class="back">
-                <h3>크리스마스 인사 팝업</h3>
-                <p>EZCARCARE 크리스마스 인사말 Instargram peed</p>
-              </div>
-            </div>
-            <div class="flip flip-vertical">
-              <div
-                class="front"
-                style="background-image: url(./src/image/sns/쿠폰\ 이벤트.jpg)"
-              >
-                <!-- <h1 class="text-shadow">SWAMP</h1> -->
-              </div>
-              <div class="back">
-                <h3>이벤트 팝업</h3>
-                <p>EZCARCARE 네이버 찜하기 할인 쿠폰 이벤트 팝업</p>
+              <div class="flip flip-vertical">
+                <div
+                  class="front"
+                  style="
+                    background-image: url(./src/image/sns/쿠폰\ 이벤트.jpg);
+                  "
+                >
+                  <!-- <h1 class="text-shadow">SWAMP</h1> -->
+                </div>
+                <div class="back">
+                  <h3>이벤트 팝업</h3>
+                  <p>EZCARCARE 네이버 찜하기 할인 쿠폰 이벤트 팝업</p>
+                </div>
               </div>
             </div>
           </div>
