--- a/index.html
+++ b/index.html
@@ -279,10 +279,30 @@
                   </li>
                   <li>
                     <b>page</b>
-                    <span
-                      >main, 콘서트홀, 전시장, 크리에이티브 page (공연, 전시,
-                      교육 button ),예매 page</span
-                    >
+                    <div class="span-text">
+                      <span>
+                        <a
+                          href="https://chej1122.cafe24.com/gnuboard5/"
+                          target="_blank"
+                          >main</a
+                        ></span
+                      >
+                      <span>
+                        <a
+                          href="https://chej1122.cafe24.com/gnuboard5/contents.php"
+                          target="_blank"
+                          >콘서트홀, 전시장, 크리에이티브 page<br />
+                          (공연, 전시, 교육 button )</a
+                        ></span
+                      >
+                      <span
+                        ><a
+                          href="https://chej1122.cafe24.com/gnuboard5/goods.php"
+                          target="_blank"
+                          >예매하기 page</a
+                        ></span
+                      >
+                    </div>
                   </li>
                   <li>
                     <b>tool</b>
@@ -358,12 +378,18 @@
                     <span>반응형 웹(Responsive), One page</span>
                   </li>
                   <li>
-                    <b>One page</b>
-                    <span>HTML, SCSS, JS (jQuery, JavaScript)</span>
+                    <b>page</b>
+                    <div class="span-text">
+                      <span>
+                        <a href="https://cheej.me/onepage/" target="_blank"
+                          >One page</a
+                        ></span
+                      >
+                    </div>
                   </li>
                   <li>
                     <b>tool</b>
-                    <span>figma, HTML, SCSS, JS(jQuery, JavaScript)</span>
+                    <span>HTML, SCSS, JS(jQuery, JavaScript)</span>
                   </li>
                   <li>
                     <b>process</b>
@@ -420,7 +446,29 @@
                   </li>
                   <li>
                     <b>page</b>
-                    <span>m_header, goods-men, goods-women</span>
+                    <div class="span-text">
+                      <span>
+                        <a
+                          href="https://cheej.me/saint-laurent-Complete/pc/index.html"
+                          target="_blank"
+                          >m_header</a
+                        ></span
+                      >
+                      <span
+                        ><a
+                          href="https://cheej.me/saint-laurent-Complete/pc/good-women.html"
+                          target="_blank"
+                          >goods-women</a
+                        ></span
+                      >
+                      <span>
+                        <a
+                          href="https://cheej.me/saint-laurent-Complete/pc/goods-men.html"
+                          target="_blank"
+                          >goods-men</a
+                        ></span
+                      >
+                    </div>
                   </li>
                   <li>
                     <b>tool</b>
