--- a/index.html
+++ b/index.html
@@ -672,6 +672,42 @@
           </div>
         </div>
       </section>
+      <section class="section sec8" id="detailed_page">
+        <h2>Detailed page</h2>
+        <div id="page_lst">
+          <ul class="page_li">
+            <li class="page page1">
+              <a href="#"
+                ><img src="./src/image/d_page/고스트2.jpg" alt=""
+              /></a>
+            </li>
+            <li class="page page2">
+              <a href="#"
+                ><img
+                  src="./src/image/d_page/다르몰_직사각백(브라운)-상세페이지(860X10000).jpg"
+                  alt=""
+              /></a>
+            </li>
+            <li class="page page3">
+              <a href="#"
+                ><img
+                  src="./src/image/d_page/다르몰_반달백(블랙)-상세페이지(860X10000).jpg"
+                  alt=""
+              /></a>
+            </li>
+            <li class="page page4">
+              <a href="#"><img src="./src/image/d_page/1479.jpg" alt="" /></a>
+            </li>
+            <li class="page page5">
+              <a href="#"><img src="./src/image/d_page/310358.jpg" alt="" /></a>
+            </li>
+
+            <li class="page page6">
+              <a href="#"><img src="./src/image/d_page/23.jpg" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="section sec8" id="banner">
         <h2>Banner</h2>
         <div id="slider">
