--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <div class="inner">
           <div class="site-contents">
             <div class="site-title">
-              <h2>"Saint Laurent "Team Project</h2>
+              <h2>"SAINT LAURENT" Team Project</h2>
             </div>
             <div class="site-view">
               <div class="site-img">
@@ -673,7 +673,7 @@
         </div>
       </section>
       <section class="section sec8" id="detailed_page">
-        <h2>Detailed page</h2>
+        <h2>DETAILED PAGE</h2>
         <div id="page_lst">
           <ul class="page_li">
             <li class="page page1">
@@ -708,8 +708,8 @@
           </ul>
         </div>
       </section>
-      <section class="section sec8" id="banner">
-        <h2>Banner</h2>
+      <section class="section sec9" id="banner">
+        <h2>BANNER</h2>
         <div id="slider">
           <div class="slides"><img src="./src/image/banner/bnr-5.png" /></div>
           <div class="slides"><img src="./src/image/banner/bnr-6.png" /></div>
@@ -724,8 +724,8 @@
           </div>
         </div>
       </section>
-      <section class="section sec9" id="motion">
-        <h2>Motion Graphic</h2>
+      <section class="section sec10" id="motion">
+        <h2>MOTION GRAPHIC</h2>
         <hr />
         <div class="motion-video">
           <div class="motion1">
@@ -767,8 +767,8 @@
           </div>
         </div>
       </section>
-      <section class="section sec10" id="contact">
-        <h2>Contact</h2>
+      <section class="section sec11" id="contact">
+        <h2>CONTACT</h2>
         <div class="me-img">
           <img class="me" src="./src/image/2-2.jpg" alt="" />
         </div>
