--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <li><a href="#intro">Intro</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#site">Site</a></li>
-            <li><a href="#design">Design</a></li>
+            <li><a href="#product">Design</a></li>
+            <li><a href="#graphic">Design</a></li>
+            <li><a href="#detailed_page">Design</a></li>
+            <li><a href="#banner">Design</a></li>
             <li><a href="#motion">Motion</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -519,7 +522,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec6" id="design">
+      <section class="section sec6" id="product">
         <!-- title -->
         <div class="title">
           <h2>
@@ -553,7 +556,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec7" id="design">
+      <section class="section sec7" id="graphic">
         <div class="sns-inner">
           <div class="title"><h2>Graphic design</h2></div>
           <div class="sns-wrap">
@@ -673,7 +676,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec8" id="design">
+      <section class="section sec8" id="detailed_page">
         <h2>DETAILED PAGE</h2>
         <div id="page_lst">
           <ul class="page_li">
@@ -709,7 +712,7 @@
           </ul>
         </div>
       </section>
-      <section class="section sec9" id="design">
+      <section class="section sec9" id="banner">
         <h2>BANNER</h2>
         <div id="slider">
           <div class="slides"><img src="./src/image/banner/bnr-5.png" /></div>
